force-app/main/default/objects/ReceivedDocument__c/ReceivedDocument__c.object-meta.xml
<CustomObject>
    <label>Received Document</label>
    <nameField>
        <label>Received Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Received Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>