force-app/main/default/objects/ReceivedDocument__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Used to give a description of the document that has been received.</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>