force-app/main/default/objects/ReceivedDocument__c/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <description>A unique identifier for the document that has been received.</description>
    <externalId>true</externalId>
    <label>Document ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>