force-app/main/default/objects/ReceivedDocument__c/fields/DocumentLocation__c.field-meta.xml
<CustomField>
    <fullName>DocumentLocation__c</fullName>
    <label>DocumentLocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>