force-app/main/default/objects/ReceivedDocument__c/fields/GoogleDriveFolderIdPortalDocumentsUpload__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderIdPortalDocumentsUpload__c</fullName>
    <description>Pulls the folder ID of the uploaded docs onto the received document so this can be used in rendering a button to link to this folder.</description>
    <formula>Household__r.GoogleDriveFolderIdPortalDocumentsUpload__c</formula>
    <label>Google Drive Folder ID Portal Uploads</label>
    <type>Text</type>
</CustomField>