force-app/main/default/objects/ReceivedDocument__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup to the related household.</description>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Received Documents</relationshipLabel>
    <relationshipName>Received_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>