force-app/main/default/objects/ReceivedDocument__c/fields/MimeType__c.field-meta.xml
<CustomField>
    <fullName>MimeType__c</fullName>
    <description>The MIME type of the document.</description>
    <label>MIME Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>