force-app/main/default/objects/ReceivedDocument__c/fields/PlatformCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedBy__c</fullName>
    <description>Who was this created by?</description>
    <label>Platform created by</label>
    <length>18</length>
    <type>Text</type>
</CustomField>