force-app/main/default/objects/ReceivedDocument__c/fields/PlatformCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedDateTime__c</fullName>
    <label>PlatformCreatedDateTime</label>
    <type>DateTime</type>
</CustomField>