force-app/main/default/objects/ReceivedDocument__c/fields/PlatformLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedBy__c</fullName>
    <label>PlatformLastModifiedBy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>