force-app/main/default/objects/ReceivedDocument__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>The timestamp of when this was last modified.</description>
    <label>Platform last modified date time</label>
    <type>DateTime</type>
</CustomField>