force-app/main/default/objects/ReceivedDocument__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>PROCESSING</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>DELETED</fullName>
                <label>Deleted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>